Repair backtest integrity and add held-out experiments